@@ -14983,6 +14983,73 @@ W = 0.93092, p-value = 5.616e-05
 > 
 > 
 > cleanEx()
+> nameEx("sigma")
+> ### * sigma
+> 
+> flush(stderr()); flush(stdout())
+> 
+> ### Name: sigma
+> ### Title: Extract Residual Standard Deviation 'Sigma'
+> ### Aliases: sigma sigma.default sigma.mlm
+> ### Keywords: models
+> 
+> ### ** Examples
+> 
+> ## -- lm() ------------------------------
+> lm1 <- lm(Fertility ~ . , data = swiss)
+> sigma(lm1) # ~= 7.165  = "Residual standard error"  printed from summary(lm1)
+[1] 7.165369
+> stopifnot(all.equal(sigma(lm1), summary(lm1)$sigma, tol=1e-15))
+> 
+> ## -- nls() -----------------------------
+> DNase1 <- subset(DNase, Run == 1)
+> fm.DN1 <- nls(density ~ SSlogis(log(conc), Asym, xmid, scal), DNase1)
+> sigma(fm.DN1) # ~= 0.01919  as from summary(..)
+[1] 0.01919449
+> stopifnot(all.equal(sigma(fm.DN1), summary(fm.DN1)$sigma, tol=1e-15))
+> 
+> ## -- glm() -----------------------------
+> ## -- a) Binomial -- Example from MASS
+> ldose <- rep(0:5, 2)
+> numdead <- c(1, 4, 9, 13, 18, 20, 0, 2, 6, 10, 12, 16)
+> sex <- factor(rep(c("M", "F"), c(6, 6)))
+> SF <- cbind(numdead, numalive = 20-numdead)
+> sigma(budworm.lg <- glm(SF ~ sex*ldose, family = binomial))
+[1] 0.7900734
+> 
+> ## -- b) Poisson -- from ?glm :
+> ## Dobson (1990) Page 93: Randomized Controlled Trial :
+> counts <- c(18,17,15,20,10,20,25,13,12)
+> outcome <- gl(3,1,9)
+> treatment <- gl(3,3)
+> sigma(glm.D93 <- glm(counts ~ outcome + treatment, family = poisson()))
+[1] 1.13238
+> ## (currently) *differs* from
+> summary(glm.D93)$dispersion # == 1
+[1] 1
+> ## and the *Quasi*poisson's dispersion
+> sigma(glm.qD93 <- update(glm.D93, family = quasipoisson()))
+[1] 1.13238
+> sigma (glm.qD93)^2 # 1.282285 is close, but not the same
+[1] 1.282285
+> summary(glm.qD93)$dispersion # == 1.2933
+[1] 1.2933
+> 
+> ## -- Multivariate lm() "mlm" -----------
+> utils::example("SSD", echo=FALSE)
+> sigma(mlmfit) # is the same as {but more efficient than}
+   deg0NA    deg4NA    deg8NA    deg0NP    deg4NP    deg8NP 
+ 56.92100  86.02325  78.99367  88.54377 109.54451 116.79041 
+> sqrt(diag(estVar(mlmfit)))
+   deg0NA    deg4NA    deg8NA    deg0NP    deg4NP    deg8NP 
+ 56.92100  86.02325  78.99367  88.54377 109.54451 116.79041 
+> ## Don't show: 
+> stopifnot(all.equal(sigma(mlmfit), sqrt(diag(estVar(mlmfit)))))
+> ## End(Don't show)
+> 
+> 
+> 
+> cleanEx()
 > nameEx("simulate")
 > ### * simulate
 > 
